[gd_scene load_steps=11 format=3 uid="uid://dpx8ocybd4n57"]

[ext_resource type="Texture2D" uid="uid://cravk65d6m07q" path="res://assets/sprites/player/weapons/megaman/rush_coil.png" id="1_0ibvr"]
[ext_resource type="Script" path="res://players/weapons/rush_jet.gd" id="1_qavoq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pn0s2"]
atlas = ExtResource("1_0ibvr")
region = Rect2(0, 30, 35, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_opv2j"]
atlas = ExtResource("1_0ibvr")
region = Rect2(35, 30, 35, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivf44"]
atlas = ExtResource("1_0ibvr")
region = Rect2(70, 0, 35, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cm6j"]
atlas = ExtResource("1_0ibvr")
region = Rect2(105, 0, 35, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4mxr"]
atlas = ExtResource("1_0ibvr")
region = Rect2(0, 30, 35, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_i84xr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn0s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opv2j")
}],
"loop": true,
"name": &"jet",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivf44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cm6j")
}],
"loop": false,
"name": &"spawn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4mxr")
}],
"loop": true,
"name": &"wait",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdbox"]
size = Vector2(27, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjvww"]
size = Vector2(20, 8.66667)

[node name="rush_jet" type="CharacterBody2D" groups=["rush_jet"]]
scale = Vector2(3, 3)
script = ExtResource("1_qavoq")
SPEED = 20000.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.666667, -5.33333)
sprite_frames = SubResource("SpriteFrames_i84xr")
animation = &"spawn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.16667, 5.16667)
shape = SubResource("RectangleShape2D_sdbox")

[node name="detect_megaman" type="Area2D" parent="." groups=["rushjet_"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_megaman"]
position = Vector2(-0.666667, -4)
shape = SubResource("RectangleShape2D_kjvww")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -4)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
position = Vector2(-61.3333, -6.66667)
range_z_min = 0
range_z_max = 100

[connection signal="body_entered" from="detect_megaman" to="." method="_on_detect_megaman_body_entered"]
[connection signal="body_exited" from="detect_megaman" to="." method="_on_detect_megaman_body_exited"]
